import java.util.List;

public class GoldCard extends AngledCard {

    private List<SIMBOLO> resources;

    @Override
    public GoldCard card(int id, int points, COLORE colour) {
        super(id, points, colour);
        // this.resources
    }

    // public ? getResources() {}

}