import java.util.List;

public class InitialCard extends AngledCard {

    private List<SIMBOLO> centerResources;

    public AngledCard card(int id, int points, COLORE colour) {
        super(id, points, colour);
        // this.cardResources
    }

    // public ? getCenterResources() {}
}