public class ObjectiveCard extends Card {

    // caratterizzazone obiettivo

    @Override
    public ObjectiveCard card(int id, int points, COLORE colour) {
        super(id, points, colour);

    }

}