public enum COLORE {
    VEGETABLE,
    ANIMAL,
    INSECT,
    SHROOM,
    FEATHER,
    INK,
    SCROLL
}