public class NewGameEvent extends Event {

    private NewGameEventType type;
    public void createGameEvent( View boardView){}
}