public enum NewGameEventType {
    GAME_STARTED,
    GAME_ENDED,
    GAME_ALREADY_FULL
}