public class NewPlayerEvent extends Event {

    private NewPlayerEventType type;
    public void createPlayerEvent( View boardView){}
}