public enum NewPlayerEventType {
    PLAYER_JOINED,
    ERROR_WHILE_ENTERING,
    PLAYER_READY_TO_PLAY,
    DISCONNECTED_PLAYER
}