public enum BoardEventType {
    NEXT_TURN,
    LAST_TURN,
    NEXT_PLAYER,
    NEW_POSITION,
    NEW_POINTS
}