public enum DeckEventType {
    INIT,
    CARD_PICKED,
    NO_MORE_CARDS
}