public class GameBoardUpdateEvent extends Event{

    private BoardEventType type;
    public void createGameBoardUpdateEvent( View boardView){}
}