public class GameDeckUpdateEvent extends Event {

    private DeckEventType type;
    public void createGameDeckUpdateEvent( View boardView){}
}