public class GameHandUpdateEvent extends Event {

    private HandEventType type;
    public void createGameHandUpdateEvent( View boardView){}
}
