public enum HandEventType{
    CARD_PICKED
    CARD_PLACED
}