package it.polimi.ingsw.codexnaturalis.view;

public class View {
}
